--- a/OpenSpartan.HaloInfinite.MCP/OpenSpartan.HaloInfinite.MCP/OpenSpartan.HaloInfinite.MCP.csproj
+++ b/OpenSpartan.HaloInfinite.MCP/OpenSpartan.HaloInfinite.MCP/OpenSpartan.HaloInfinite.MCP.csproj
@@ -12,9 +12,13 @@
   <ItemGroup>
     <PackageReference Include="Den.Dev.Grunt" Version="1.0.66" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0-preview.2.25163.2" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.70.0" />
     <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="4.70.0" />
     <PackageReference Include="ModelContextProtocol" Version="0.1.0-preview.1.25171.12" />
+    <PackageReference Include="Serilog" Version="4.2.1-dev-02352" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0-dev-02301" />
   </ItemGroup>
 
 </Project>
