--- a/OpenSpartan.HaloInfinite.MCP/OpenSpartan.HaloInfinite.MCP/OpenSpartan.HaloInfinite.MCP.csproj
+++ b/OpenSpartan.HaloInfinite.MCP/OpenSpartan.HaloInfinite.MCP/OpenSpartan.HaloInfinite.MCP.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Serilog" Version="4.2.1-dev-02352" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0-dev-02301" />
+    <PackageReference Include="SkiaSharp" Version="3.118.0-preview.2.3" />
   </ItemGroup>
 
 </Project>
