--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - '[0-9]+.[0-9]+.[0-9]+'  # Matches version tags like 1.0.0, 2.3.4, etc.
 
 permissions:
-  contents: read
+  contents: write
   packages: write
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
